fix(docs): [LeanCache] 将 Demos 添加入 Demo 页面 (#1325)

--- a/templates/pages/demo.html
+++ b/templates/pages/demo.html
@@ -35,7 +35,8 @@
           <span class="pull-right label label-success" ng-show="demo.type=='android'">Android</span>
           <span class="pull-right label label-warning" ng-show="demo.type=='unity'">Unity</span>
           <span class="pull-right label label-danger" ng-show="demo.type=='winphone'">Windows Phone</span>
-          <span class="pull-right label label-danger" ng-show="demo.type=='js'">JavaScript</span>
+          <span class="pull-right label label-default" ng-show="demo.type=='js'">JavaScript</span>
+          <span class="pull-right label label-info" ng-show="demo.type=='node'">Node.js</span>
         </h1>
         <p class="demo-desc">{{demo.desc}}</p>
         <!-- <a href="{{demo.downlink}}" class="btn btn-default">下载</a>
