将「环境变量」提升为一级标题、补充自定义环境变量的内容。 (#1326)

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -38,9 +38,13 @@
 
 {% block supported_frameworks%}{% endblock %}
 
-### 环境变量
+### 运行环境定制
 
-云引擎平台提供下列环境变量供应用使用：
+{% block custom_runtime %}{% endblock %}
+
+## 环境变量
+
+云引擎平台默认提供下列环境变量供应用使用：
 
 变量名|说明
 ---|---
@@ -56,9 +60,11 @@
 
 **提示**：如果在客户端想调用云引擎的预备环境，各个 SDK 都有类似于 `setProduction` 的方法，比如 [JavaScript SDK &middot; AV.setProduction(production)](/api-docs/javascript/symbols/AV.html#.setProduction)，其中 `production` 设置为 `0` 则该 SDK 将请求预备环境；设置为 `1` 将请求生产环境，默认为 `1`。
 
-### 运行环境定制
+### 自定义环境变量
 
-{% block custom_runtime %}{% endblock %}
+你也可以在 [云引擎 > 设置](/cloud.html?appid={{appid}}#/conf) 页面中添加自定义的环境变量。其中名字必须是字母、数字、下划线且以字母开头，值必须是字符串，修改环境变量后会在下一次部署时生效。
+
+按照一般的实践，可以将一些配置项存储在环境变量中，这样可以在不修改代码的情况下，修改环境变量并重新部署，来改变程序的行为；或者可以将一些第三方服务的 Secret Key 存储在环境变量中，避免这些密钥直接出现在代码中。
 
 ## 存储数据
 
