fix(docs): [导航] 增加 BeeCloud 支付教程

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -262,6 +262,7 @@
          <li><a href="https://zhuanlan.zhihu.com/p/21399155">快速开发聊天机器人</a></li>
          <!-- <a href="tutorials.html#自带_UI_的聊天工具包_ChatKit">聊天工具包 ChatKit</a></li> -->
          <li><a href="tutorials.html#为聊天接入表情云">为聊天接入表情云</a></li>
+         <li><a href="pay-beecloud.html">为网站加入收款功能</a></li>
        </ul>
      </div>
    </div>
