更新 swift sdk 安装文档

--- a/views/sdk_setup.tmpl
+++ b/views/sdk_setup.tmpl
@@ -11,11 +11,14 @@
 
 {% block libs_tool_automatic %}{% endblock %}
 
+{% block text_manual_setup %}
 ### 手动安装
 
 <a class="btn btn-default" target="_blank" href="sdk_down.html">下载 SDK</a>
 
 {% block import_sdk %}{% endblock %}
+
+{% endblock %}
 
 ## 初始化
 
