chore(docs): [导航] 将 Swift 加入导航菜单 (#1342)

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,4 +1,7 @@
---- layout: download.swig ---
+---
+layout: download.swig
+isHome: true
+---
 <div class="home-full-width-content">
   <div class="doc-home-title text-center">
     <h1 class="font-logo">LeanCloud Documentation</h1>
@@ -103,6 +106,18 @@
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
+        <h2>Swift SDK</h2>
+        <ul>
+          <li><a href="sdk_setup-swift.html">SDK 安装指南</a></li>
+          <li><a href="leanstorage_guide-swift.html">数据存储开发指南</a></li>
+          <!-- <li><a href="/api-docs/iOS/index.html" target="_blank">SDK API</a></li> -->
+        </ul>
+      </div>
+    </div>
+    <!-- .col-md-4 -->
+
+    <div class="col-md-3 col-xs-6">
+      <div class="link-block">
         <h2>Android SDK</h2>
         <ul>
           <li><a href="sdk_setup-android.html">SDK 安装指南</a></li>
@@ -120,6 +135,11 @@
       </div>
     </div>
     <!-- .col-md-4 -->
+
+  </div>
+  <!-- .row -->
+<hr>
+  <div class="row">
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
@@ -142,11 +162,6 @@
       </div>
     </div>
      <!-- .col-md-4 -->
-
-  </div>
-  <!-- .row -->
-<hr>
-  <div class="row">
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
@@ -193,6 +208,10 @@
       </div>
     </div>
 
+  </div>
+  <!-- .row -->
+<hr>
+  <div class="row">
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
@@ -209,10 +228,6 @@
       </div>
     </div>
     <!-- .col-md-4 -->
-  </div>
-  <!-- .row -->
-<hr>
-  <div class="row">
 
     <div class="col-md-3 col-xs-6">
       <div class="link-block">
@@ -263,18 +278,6 @@
          <!-- <a href="tutorials.html#自带_UI_的聊天工具包_ChatKit">聊天工具包 ChatKit</a></li> -->
          <li><a href="tutorials.html#为聊天接入表情云">为聊天接入表情云</a></li>
          <li><a href="pay-beecloud.html">为网站加入收款功能</a></li>
-       </ul>
-     </div>
-   </div>
-
-   <div class="col-md-3 col-xs-6">
-     <div class="link-block">
-       <h2>下载和其他</h2>
-       <ul>
-         <li><a href="sdk_down.html">SDK 下载</a></li>
-         <li><a href="demo.html">Demo</a></li>
-         <li><a href="http://leancloud.sexy" target="_blank">第三方库</a></li>
-
        </ul>
      </div>
    </div>
