fix(docs): [存储] Swift 移除 saveOptions 的说明 (#1348)

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -452,7 +452,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% endblock %}
 ### 根据 id 查询
-在[获取对象](#获取对象)中我们介绍过如何通过 objectId 来获取对象实例，从而简单的介绍了一下 {{baseQueryClassName}} 的用法，代码请参考对应的内容，不再赘述。
+在 [获取对象](#获取对象) 中我们介绍过如何通过 objectId 来获取对象实例，从而简单的介绍了一下 `{{baseQueryClassName}}` 的用法，代码请参考对应的内容，不再赘述。
 
 ### 条件查询
 在大多数情况下做列表展现的时候，都是根据不同条件来分类展现的，比如，我要查询所有优先级为 0 的 Todo，也就是做列表展现的时候，要展示优先级最高，最迫切需要完成的日程列表，此时基于 priority 构建一个查询就可以查询出符合需求的对象：
@@ -512,7 +512,7 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 ```sql
   select * from Todo where title LIKE '%李总%'
 ```
-不包含查询与包含查询是对立的，不包含指定关键字的查询，可以使用 [正则匹配方法](#正则匹配查询) 来实现。例如，查询标题不包含「机票」的 Todo：
+不包含查询与包含查询是对立的，不包含指定关键字的查询，可以使用 [正则匹配方法](#正则匹配查询) 来实现。例如，查询标题不包含「机票」的 Todo，正则表达式为 `^((?!机票).)*$`：
 
 {% block code_query_with_not_contains_keyword_using_regex %}正则表达式{% endblock %}
 
