--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -222,6 +222,8 @@
             </li>
             <li><a href="https://github.com/leancloud/cpp-sdk" class="btn btn-link"><i class="icon icon-github"></i> C++ SDK</a>
             </li>
+            <li><a href="https://github.com/leancloud/swift-sdk" class="btn btn-link"><i class="icon icon-github"></i> Swift SDK</a>
+            </li>
           </ul>
         </div>
       </div>
