fix(docs): [FAQ] 增加「先验证手机号码再注册」 (#1370)
Closes #1359

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -140,6 +140,7 @@
         <li><a href="faq.html#Undefined_symbols_for_architecture">Undefined symbols for architecture</a></li>
         <li><a href="faq.html#请求报错">请求报错</a></li>
         <li><a href="faq.html#地理位置查询错误">地理位置查询错误</a></li>
+        <li><a href="leanstorage_guide-ios.html#手机号码登录">如何先验证手机号码再注册</a></li>
       </ul>
     </div>
   </div>
@@ -154,6 +155,7 @@
         <li><a href="faq.html#对_AVObject_对象使用_getDate__createdAt___方法读取创建时间为什么会返回_null">对 AVObject 对象使用 getDate("createdAt") 方法读取创建时间为什么会返回 null </a></li>
         <li><a href="faq.html#client_open___操作为什么没有被调用_">client.open() 操作为什么没有被调用</a></li>
         <li><a href="faq.html#Anroid_设备每次启动时_installationId_为什么总会改变_如何才能不改变_">Anroid 设备每次启动时，installationId 为什么总会改变如何才能不改变</a></li>
+        <li><a href="leanstorage_guide-android.html#手机号码登录">如何先验证手机号码再注册</a></li>
       </ul>
     </div>
   </div>
@@ -170,6 +172,7 @@
         <li><a href="faq.html#有没有同步_API">有没有同步 API</a></li>
         <li><a href="faq.html#在_AV_initialize_中用了_Master_Key_但发出去的_AJAX_请求返回_206">在 AV.initialize 中用了 Master Key，但发出去的 AJAX 请求返回 206</a></li>
         <li><a href="faq.html#Web_端会暴露_App_Key_和_App_Id_怎么保证安全性_">Web 端会暴露 App Key 和 App Id，怎么保证安全性</a></li>
+        <li><a href="leanstorage_guide-js.html#手机号码登录">如何先验证手机号码再注册</a></li>
       </ul>
     </div>
   </div>
