--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -269,15 +269,9 @@ console.log('getHours', time.hours());
 
 ## 绑定独立域名
 
-只有主域名需要备案，二级子域名不需要备案。独立域名要根据 Web 主机域名来解析，绑定完成后 Web 主机域名不可变更，否则会导致独立域名绑定失效。
+国内节点绑定独立域名需要有ICP备案，只有主域名需要备案，二级子域名不需要备案；如果没有ICP备案，请参考[域名备案流程](#域名备案流程)。
 
-### 主域名
-
-仅使用云引擎托管静态文件、未使用其他 LeanCloud 服务的用户，需要自行办理独立域名与应用绑定的相关手续。
-
-**请注意，根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎**。
-
-其他用户如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://ticket.leancloud.cn/)，通过工单来提出申请：
+如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://ticket.leancloud.cn/)，通过工单来提出申请：
 
 * 你已经绑定的 leanapp.cn 或 avosapps.us 二级子域名（请参考设置域名）
 * 要绑定的域名（必须是你名下的域名）
@@ -288,6 +282,12 @@ console.log('getHours', time.hours());
 我们会在 3 个工作日内完成审核，如果审核通过将为你绑定域名。请在绑定操作完成后配置 DNS：
 
 - 将要绑定域名的 CNAME 指向 leanapp.cn（国内）或 avosapps.us（美国）
+
+请注意：
+
+* 根据政策法规要求，在完成绑定独立域名前，请不要将独立域名解析到云引擎。
+* 独立域名要根据 Web 主机域名来解析，绑定完成后 Web 主机域名不可变更，否则会导致独立域名绑定失效。
+* 只有应用的生产环境可以绑定独立域名，预备环境不能绑定。
 
 ### 域名备案流程
 
