fix(docs): [云引擎] 更新旧的工单地址

--- a/views/leanengine_webhosting_guide.tmpl
+++ b/views/leanengine_webhosting_guide.tmpl
@@ -269,9 +269,9 @@ console.log('getHours', time.hours());
 
 ## 绑定独立域名
 
-国内节点绑定独立域名需要有ICP备案，只有主域名需要备案，二级子域名不需要备案；如果没有ICP备案，请参考[域名备案流程](#域名备案流程)。
+国内节点绑定独立域名需要有 ICP 备案，只有主域名需要备案，二级子域名不需要备案；如果没有 ICP 备案，请参考 [域名备案流程](#域名备案流程)。
 
-如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 / 技术支持](https://ticket.leancloud.cn/)，通过工单来提出申请：
+如果需要为应用绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.cn>，或者从控制台菜单中选择 [帮助 > 技术支持](https://leanticket.cn/t/leancloud)，通过工单来提出申请：
 
 * 你已经绑定的 leanapp.cn 或 avosapps.us 二级子域名（请参考设置域名）
 * 要绑定的域名（必须是你名下的域名）
