--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -65,6 +65,20 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 了解以上配置项有助于开发者针对业务需求，在功能选择上做出调整。下面，我们根据不同的需求逐一介绍短信服务的功能。
 
+
+### 短信服务覆盖的国家和地区
+目前 LeanCloud 的短信服务覆盖以下国家和地区：
+
+大区| 国家和地区 |
+--- | --- |---
+中国|中国大陆，台湾省，香港行政区，澳门行政区
+北美|美国，加拿大
+南美|巴西
+欧洲|英国，法国，德国，意大利，乌克兰，俄罗斯，西班牙
+东亚|韩国，日本
+东南亚|印度，马来西亚，新加坡，泰国，越南，印度尼西亚
+大洋洲|澳大利亚，新西兰
+
 ### 短信计费
 
 如果一个短信模板字数超过 70 个字（包括签名的字数），那么该短信在发送时会被运营商<u>按多条来收取费用</u>，但接收者收到的仍是<u>一条完整的短信</u>。
