--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -422,6 +422,8 @@ Pointer 只是个描述并没有具象的类与之对应，它与 `{{relationObj
 
 {% block code_file_image_thumbnail %}{% endblock %}
 
+<div class="callout callout-info">注意：<strong>图片最大不超过 20 M 才可以获取缩略图。</strong> </div>
+
 ### 文件元数据
 
 `{{fileObjectName}}` 的 `metaData` 属性，可以用来保存和获取该文件对象的元数据信息：
