--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -17,7 +17,7 @@
                   <li><a href="/docs/sdk_down.html">SDK 下载</a></li>
                   <li ng-class="{active:currentHtmlPage=='help.html'}">
                       <a class="nav-key-6 dropdown-toggle" title="帮助" data-toggle="dropdown">
-                          <i class="icon icon-dashbd-icon icon-info"></i>
+                          <i class="icon icon-dashbd-icon icon-question"></i>
                           <i class="dashboard-subnav-text">帮助</i>
                       </a>
                       <ul class="dropdown-menu">
