feat(nav): add link icon

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -7,14 +7,19 @@
         </li>
       </ul>
       <div class="navbar-app-actions-wrap">
-        <ul class="nav navbar-nav navbar-app-actions" >
-          <li class="dropdown dropdown-toggle-app-name" >
-          <a href="index.html">
-            <i class="icon icon-dashbd-icon icon-blank-app"></i>
-            <div class="name">文档首页</div>
-          </a>
+        <ul class="nav navbar-nav navbar-app-actions">
+          <li class="dropdown dropdown-toggle-app-name">
+            <a href="index.html">
+              <i class="icon icon-dashbd-icon icon-blank-app"></i>
+              <div class="name">文档首页</div>
+            </a>
           </li>
-          <li><a href="/docs/sdk_down.html">SDK 下载</a></li>
+          <li>
+            <a href="/docs/sdk_down.html">
+              <i class="icon icon-dashbd-icon icon-package"></i>
+              <div class="dashboard-subnav-text">SDK 下载</div>
+            </a>
+          </li>
           <li ng-class="{active:currentHtmlPage=='help.html'}">
             <a class="nav-key-6 dropdown-toggle" title="帮助" data-toggle="dropdown">
               <i class="icon icon-dashbd-icon icon-question"></i>
