fix(template): wrong icon for docs homepage

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -10,7 +10,7 @@
         <ul class="nav navbar-nav navbar-app-actions">
           <li class="dropdown dropdown-toggle-app-name">
             <a href="index.html">
-              <i class="icon icon-dashbd-icon icon-blank-app"></i>
+              <i class="icon icon-dashbd-icon icon-home"></i>
               <div class="name">文档首页</div>
             </a>
           </li>
