--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -603,6 +603,37 @@ body {
   }
 }
 
+.sidebar-loading {
+  @size: 18px;
+  @weight: 2px;
+  @keyframes spin {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  position: fixed;
+  border-radius: 50%;
+  width: @size;
+  height: @size;
+  border: @weight solid fade(@gray, 10%);
+  border-top-color: @brand-primary;
+  top: 20px;
+  right: 20px;
+  animation: spin 1s infinite linear;
+  transition: opacity .2s ease .6s;
+  pointer-events: none;
+  opacity: 0;
+
+  &.on {
+    opacity: 1;
+  }
+
+  @media (max-width: @screen-sm-max) {
+    top: 10px;
+    right: 0;
+  }
+}
+
 #toc {
   width: 100%;
   padding: 10px 0 20px 0;
