腾讯云集成

--- a/custom/less/section-docs.less
+++ b/custom/less/section-docs.less
@@ -373,6 +373,7 @@ body {
       position: relative;
 
       input {
+        width: 110px;
         border: none;
         border-radius: 0;
         height: 32px;
@@ -1263,6 +1264,10 @@ blockquote{
     font-size: @head-size;
     line-height: @head-size;
   }
+
+  .tc-footer{
+     position: relative;
+   }
 
   .comment-body {
     width: 100%;
