--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -13,102 +13,18 @@
       <li class="muted">·</li>
       <li><a href="/apps.html" target="_self">App</a></li>
       <li class="muted">·</li>
-      <li><a href="/docs/faq.html" target="_self">常见问题</a></li>
+      <li><a href="http://leancloud.cn/docs/faq.html" target="_self">常见问题</a></li>
       <li class="muted">·</li>
-      <li><a href="https://leanticket.cn/t/leancloud/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
+      <li><a href="http://ticket.leancloud.cn/" target="_self"><span class="mobile-hide">技术</span>支持</a></li>
       <!-- <li><a href="http://ticket.leancloud.cn/tickets?token={{user.session_token || 'Gs5Xw4vjyCznrP6OcgMheOWDuatVpbFPiL78eMo6JC0dENB8'}}" target="_blank"><span class="mobile-hide">用户</span>反馈</a></li> -->
       <li class="muted">·</li>
       <li><a href="//status.leancloud.cn/"><span class="mobile-hide">健康</span>状态</a></li>
       <li class="muted">·</li>
-      <li><a href="https://forum.leancloud.cn/">社区</a></li>
+      <li><a href="http://forum.leancloud.cn/">社区</a></li>
       <li class="muted">·</li>
-      <li><a href="https://blog.leancloud.cn/">Blog</a></li>
+      <li><a href="http://blog.leancloud.cn/">Blog</a></li>
       <li class="muted">·</li>
       <li><a href="https://github.com/leancloud/docs">文档源码</a></li>
     </ul>
   </div>
 </footer>
-
-<div id="comment-container" ng-class="{'no-comments': currentComments.length<1}">
-  <div class="comment-head">
-    {{allComment[version]}}
-    <span class="close" ng-click="closeCommentModal()">&times;</span>
-  </div>
-  <div class="comment-body">
-    <div class="comment-list" ng-class="{'no-login': !currentCommentUser.username}">
-      <ul>
-        <li ng-show="currentComments.length<1">暂无评论</li>
-        <li ng-repeat="comment in currentComments">
-          <div class="comment-author">{{comment.author}}</div>
-          <div class="comment-timestamp">{{ comment.updatedAt | date: 'yyyy-MM-dd HH:mm:ss '}}</div>
-          <div class="comment-content">{{comment.content}}</div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="comment-compose" ng-show="currentCommentUser.username">
-    <div class="form-group"> <textarea class="form-control comment-content" ng-model="commentContent"></textarea></div>
-    <div class="form-meta">
-      <!-- 您已登录为 <b>{{currentCommentUser.username}}</b> -->
-      <button class="btn btn-sm btn-default create-comment pull-right" ng-click="createComment($event)">
-        <i class="icon icon-chat-bold"></i> 评论
-      </button>
-    </div>
-  </div>
-  <div class="comment-compose no-login" ng-show="!currentCommentUser.username">
-    您需要 <a class="comment-login" ng-click="loginComment()">授权</a> 后才能评论
-  </div>
-</div>
-
-<script src="https://download.leancloud.cn/sdk/latest.js"></script>
-
-
-
-{% if basename!='index' and basename!='sdk_down' and basename !='demo' and basename !='start' %}
-<script src="custom/js/lib/contents.js"></script>
-<script src="custom/js/md.js"></script>
-{% endif %}
-
-{% if basename=='sdk_down' %}
-<script type="text/javascript" src="custom/js/download.js">
-</script>
-{% endif %}
-
-<script type="text/javascript">
-ZeroClipboard.setDefaults({
-    moviePath: 'custom/js/lib/zeroclipboard/zeroclipboard.swf'
-});
-$(function(){
-    // $('#content [version]').each(function(k,v){
-    //     var version = $(v).attr('version');
-    //     $(v).append('<div class="toggle-comment" ng-click="showCommentDialog(\''+version+'\''+',$event)">+ <span> {{}}</span> </div>');
-    // })
-
-    $('#content [version]').each(function(k,v){
-        var version = $(v).attr('version');
-        $(v).append('<div class="inline-comment-wrap" version="'+version+'" all-comment="allComment" showDialogMethod="showCommentDialog()" lc-comment> </div>');
-    });
-
-    angular.element(document).ready(function() {
-
-      angular.bootstrap(document, ['app']);
-
-    });
-});
-
-</script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-42629236-7', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-
-
-
