--- a/views/leanengine_cloudfunction_guide.tmpl
+++ b/views/leanengine_cloudfunction_guide.tmpl
@@ -19,6 +19,15 @@
 
 如果还不知道如何创建云引擎项目，本地调试并部署到云端，请阅读 [云引擎快速入门](leanengine_quickstart.html)。
 
+## 多语言支持
+
+云引擎支持多种语言的运行环境，你可以选择自己熟悉的语言开发应用：
+
+- [Node.js](leanengine_cloudfunction_guide-node.html)
+- [Python](leanengine_guide-python.html)
+- [PHP](leanengine_cloudfunction_guide-php.html)
+- [Java](leanengine_cloudfunction_guide-java.html)
+
 ## 云函数
 
 示例项目中 {{ cloud_func_file }} 文件定义了一个很简单的 `hello` 云函数。现在让我们看一个明显较复杂的例子来展示云引擎的用途。在云端进行计算的一个重要理由是，你不需要将大量的数据发送到设备上做计算，而是将这些计算放到服务端，并返回结果这一点点信息就好。
