--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,27 +1,77 @@
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+<nav class="dashboard-subnav navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-collapse" id="app-options">
+            <ul class="nav navbar-nav navbar-app-select">
+                <li>
+                  <a href="/applist.html" class="nav-logo font-logo">L<span class="visible-xs-inline">eanCloud</span></a>
+                </li>
+            </ul>
 
-<title>TAB 文档</title>
-<script src="//cdn1.lncld.net/static/js/av-mini-0.5.4.js"></script>
-<!-- build:js custom/js/docs-all.js -->
-<script src="custom/js/lib/jquery.min.js"></script>
-<script src="custom/js/lib/bootstrap.min.js"></script>
-<script src="custom/js/lib/bootstrap-hover-dropdown.js"></script>
-<script src="custom/js/lib/pretty/prettify.js"></script>
-<script src="custom/js/lib/jquery.scrollTo.min.js"></script>
-<script src="custom/js/lib/angular/angular.min.js"></script>
-<script src="custom/js/lib/zeroclipboard/zeroclipboard.js"></script>
-<script src="custom/js/lib/markdown.min.js"></script>
-<script src="custom/js/lib/md5.js"></script>
-
-<script src="custom/js/lib/angular-gravatar.js"></script>
-<script src="custom/js/prepare-dom.js"></script>
-<script src="custom/js/app.js"></script>
-<script src="custom/js/common.js"></script>
-<script src="custom/js/demo.js"></script>
-<!-- endbuild -->
+            <div class="navbar-app-actions-wrap">
+                <ul class="nav navbar-nav navbar-app-actions" >
+                  <li class="dropdown dropdown-toggle-app-name" >
+                    <a href="index.html">
+                      <i class="icon icon-dashbd-icon icon-blank-app"></i>
+                      <div class="name">文档首页</div>
+                    </a>
+                  </li>
 
 
-<link rel="stylesheet" type="text/css" href="custom/css/app-docs.css?githubv1">
+                  <li ng-class="{active:currentHtmlPage=='help.html'}">
+                      <a class="nav-key-6 dropdown-toggle" title="帮助" data-toggle="dropdown">
+                          <i class="icon icon-dashbd-icon icon-question"></i>
+                          <i class="dashboard-subnav-text">帮助</i>
+                      </a>
+                      <ul class="dropdown-menu">
+                          {% if layout!="board-nologin.swig" %}
+                            <!-- <li><a href="start.html">快速入门</a></li> -->
+                          {% endif %}
+                          <li><a href="/docs">文档</a></li>
+                          <li><a href="/docs/sdk_down.html">SDK 下载</a></li>
+                          <li><a href="http://ticket.leancloud.cn/tickets">技术支持</a></li>
+                          <li role="presentation" class="divider"></li>
+                          <li><a href="/pricing.html">价格</a></li>
+                          <li><a href="/apps.html">移动端 App</a></li>
+                          <li><a href="http://forum.leancloud.cn">社区</a></li>
+                          <li><a href="http://blog.leancloud.cn/">Blog</a></li>
+                          <li role="presentation" class="divider"></li>
+                          <li><a href="https://leancloud.cn/apionline/">在线 API 工具</a></li>
+                          <li><a href="http://drop.avosapps.com/">iOS 测试包分发</a></li>
+                          <!-- <li><a href="#" data-toggle="modal" data-target="#modal-shortcuts">快捷键</a></li> -->
+                      </ul>
+                  </li>
+
+                </ul>
+            </div>
+
+            <ul class="nav navbar-nav navbar-user-actions navbar-right" ng-cloak>
+
+
+                <li class="dropdown" ng-show="user.username">
+                    <a role="button" class="dropdown-toggle user-name" data-toggle="dropdown">
+                        <span class="user-gravatar">
+                            <img gravatar-src="user.email" gravatar-size="64">
+                        </span>
+                        <span class="user-name-text">{{user.username}}</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/settings.html">账号设置</a></li>
+                        <li><a href="/applist.html">控制台</a></li>
+                        <li><a href="/settings.html#/setting/team">团队管理</a></li>
+                        <li><a href="/bill.html#/bill/general">财务</a></li>
+                        <!-- <li><a href="settings.html#/setting/invite">邀请好友</a></li> -->
+                        <li ng-show="user.username" style=""><a ng-click="signout()">登出</a></li>
+                    </ul>
+                </li>
+                <li ng-hide="user.username">
+                    <a href="/login.html#/signin">登录</a>
+                </li>
+                <li ng-hide="user.username">
+                    <a href="/login.html#/signup">注册</a>
+                </li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+    <!-- .container-fluid -->
+</nav>
+
