在快速入门中增加 java SDK 连接

--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -61,11 +61,20 @@ title: 快速入门 - LeanCloud
             Unity
           </label>
         </div>
+
         <div class="radio custom-control">
           <label>
             <input type="radio" ng-model="selectedPlat" value="wp">
             <span class="control-indicator"></span>
             Windows Phone
+          </label>
+        </div>
+
+        <div class="radio custom-control">
+          <label>
+            <input type="radio" ng-model="selectedPlat" value="java">
+            <span class="control-indicator"></span>
+            Java
           </label>
         </div>
       </form>
