--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -84,7 +84,11 @@
 
 {% block code_save_todo_folder %}{% endblock %}
 
+{% if node=='qcloud' %}
+创建完成后，打开 `控制台 > 存储`，点开 `TodoFolder` 类，就可以看到刚才添加的数据。除了 name、priority（优先级）之外，其他字段都是数据表的内置属性。
+{% else %}
 创建完成后，打开 [控制台 > 存储](/data.html?appid={{appid}}#/)，点开 `TodoFolder` 类，就可以看到刚才添加的数据。除了 name、priority（优先级）之外，其他字段都是数据表的内置属性。
+{% endif %}
 
 内置属性|类型|描述
 ---|---|---
