--- a/views/sms_guide.tmpl
+++ b/views/sms_guide.tmpl
@@ -39,9 +39,15 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ## 短信服务配置
 
+{% if node=='qcloud' %}
+从应用级别来控制能否发送短信，进入 `控制台 > 设置 > **安全中心**`，设置 **短信发送** 开关。
+
+然后点击 `**应用选项**`，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
+{% else %}
 从应用级别来控制能否发送短信，进入 [控制台 > 设置 > **安全中心**](/app.html?appid={{appid}}#/security)，设置 **短信发送** 开关。
 
 然后点击 [**应用选项**](/app.html?appid={{appid}}#/permission)，查看与短信相关选项。当开启 **安全中心** > **短信发送** 服务之后，以下打勾的选项会被默认开启：
+{% endif %}
 
 - 【&check;】用户账号 > **用户注册时，向注册手机号码发送验证短信**<br/>
   开启：调用 AVUser 注册相关的接口时，如果传入了手机号，系统则会自动发送验证短信，然后开发者需要手动调用一下验证接口，这样 `_User` 表中的 `mobilePhoneVerified` 值才会被置为 `true`。<br/>
@@ -90,9 +96,13 @@ LeanCloud 短信服务支持的应用场景有以下三种：
 
 ### 短信购买
 
+{% if node=='qcloud' %}
+短信发送采取实时扣费。如果当前账户没有足够的<u>短信余额</u>（注意不是账户余额），短信将无法发送。
+{% else %}
 短信发送采取实时扣费。如果当前账户没有足够的<u>短信余额</u>（注意不是账户余额），短信将无法发送。充值请进入 [开发者账户 > 财务 > 财务概况](/bill.html#/bill/general)，点击 **短信充值**。
 
 同时我们建议设定好短信的 [余额告警](/settings.html#/setting/alert)，以便在第一时间收到短信或邮件获知短信余额不足。
+{% endif %}
 
 ## 验证类
 
