--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -4,7 +4,12 @@
   <div class="col-md-12">
     <div class="doc-home-title">
       <h1 class="font-logo">
-      LeanCloud SDK 下载 <a href="https://download.leancloud.cn/sdk/feed.xml" class="changelog-rss bstooltip" title="所有平台 SDK 的 RSS 更新"><i class="icon icon-rss"></i> RSS</a>
+        {% if node=='qcloud' %}
+        TAB SDK 下载 
+        {% else %}
+        LeanCloud SDK 下载 
+        {% endif %}
+      <a href="https://download.leancloud.cn/sdk/feed.xml" class="changelog-rss bstooltip" title="所有平台 SDK 的 RSS 更新"><i class="icon icon-rss"></i> RSS</a>
       </h1>
       <h4>SDK 及相关资源下载</h4>
     </div>
