--- a/templates/pages/demo.html
+++ b/templates/pages/demo.html
@@ -4,6 +4,16 @@
     <div class="col-md-12">
 
       <div class="doc-home-title">
+        {% if node=='qcloud' %}
+        <h1 class="font-logo">
+          TAB Demos
+        </h1>
+        <h4>
+          使用 TAB 搭建的各类应用演示
+          <br>
+          GitHub 太慢或无法访问？<a href="https://download.leancloud.cn/demo/">直接在 LeanCloud 下载</a>
+        </h4>
+        {% else %}
         <h1 class="font-logo">
           LeanCloud Demos
         </h1>
@@ -12,6 +22,7 @@
           <br>
           GitHub 太慢或无法访问？<a href="https://download.leancloud.cn/demo/">直接在 LeanCloud 下载</a>
         </h4>
+        {% endif %}
       </div>
       <!-- .doc-home-title -->
 
