--- a/templates/pages/start.html
+++ b/templates/pages/start.html
@@ -5,8 +5,13 @@ title: 快速入门 - LeanCloud
 <div class="start-page" ng-controller="StartCtrl" >
 
   <div class="doc-home-title">
+    {% if node=='qcloud' %}
+    <h1 class="font-logo">TAB Quick Start</h1>
+    <h4>帮助您快速上手 TAB</h4>
+    {% else %}
     <h1 class="font-logo">LeanCloud Quick Start</h1>
     <h4>帮助您快速上手 LeanCloud</h4>
+    {% endif %}
   </div>
   <!-- .doc-home-title -->
 
