--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -1,7 +1,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+{% if node == 'qcloud' %}
+<link rel="icon" href="images/tab.ico" type="image/x-icon">
+{% endif %}
 <title>LeanCloud 文档</title>
 <script src="//cdn1.lncld.net/static/js/av-mini-0.5.4.js"></script>
 <!-- build:js custom/js/docs-all.js -->
