cloud  index nav

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -2,7 +2,9 @@
   <div class="container-fluid">
     <nav class="" role="navigation">
       <ul class="nav navbar-nav">
-
+        {% if node=='qcloud' %}
+        <li><a href="index.html">文档首页</a></li>
+        {% endif %}
         <li><a href="start.html">快速入门</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">功能概览</a>
