add default field solution, for PR #1406

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -44,6 +44,7 @@
         <li><a href="faq.html#当数据量越来越来大时_怎么加快查询速度_" target="_blank">当数据量越来越来大时，怎么加快查询速度</a></li>
         <li><a href="faq.html#LeanCloud_查询支持_Sum__Group_By__Distinct_这种函数吗_" target="_blank">LeanCloud 查询支持 Sum, Group By, Distinct 这种函数吗</a></li>
         <li><a href="faq.html#sessionToken_在什么情况下会失效_" target="_blank">sessionToken 在什么情况下会失效</a></li>
+        <li><a href="faq.html#默认值的查询结果为什么不对">默认值的查询结果为什么不对</a></li>
       </ul>
     </div>
   </div>
