move growing.io analytics to head

--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -24,5 +24,20 @@
 <script src="custom/js/demo.js"></script>
 <!-- endbuild -->
 
+<script type='text/javascript'>
+      var _vds = _vds || [];
+      window._vds = _vds;
+      (function(){
+        _vds.push(['setAccountId', 'a268202b003f2516']);
+        (function() {
+          var vds = document.createElement('script');
+          vds.type='text/javascript';
+          vds.async = true;
+          vds.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'dn-growing.qbox.me/vds.js';
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(vds, s);
+        })();
+      })();
+  </script>
 
 <link rel="stylesheet" type="text/css" href="custom/css/app-docs.css?githubv1">
