添加 js 建模指南链接。 (#1428)

--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -74,13 +74,16 @@
             <li><a href="sdk_setup-js.html">SDK 安装指南</a></li>
             <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
             <li><a href="js_push.html">消息推送开发指南</a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
+            <li><a href="relation_guide-js.html">关系建模指南</a></li>
             <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
             {% if node!='qcloud' %}
             <li><a href="sms_guide-js.html">短信服务使用指南</a></li>
             {% endif %}
             <li><a href="js_analytics.html">统计分析开发指南</a></li>
             <!-- <li><a href="js_faq.html">FAQ</a></li> -->
+            <li role="separator" class="divider"></li>
             <li><a href="/api-docs/javascript/index.html" target="_blank">数据存储 SDK API</a></li>
             <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">实时通信 SDK API</a></li>
             <li role="separator" class="divider"></li>
