--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -162,6 +162,7 @@ isHome: true
           <li><a href="leanstorage_guide-js.html">数据存储开发指南</a></li>
           <li><a href="js_push.html">消息推送开发指南</a></li>
           <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
+          <li><a href="relation_guide-js.html">关系建模指南</a></li>
           <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
           <li><a href="js_analytics.html">统计分析开发指南</a></li>
           {% if node!='qcloud' %}
