--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -233,6 +233,7 @@ isHome: true
       <div class="link-block">
         <h2>Java SDK</h2>
         <ul>
+          <li><a href="sdk_setup-java.html">SDK 安装指南</a></li>
           <li><a href="leanstorage_guide-java.html">数据存储开发指南</a></li>
           <li class="dropdown-header">云引擎</li>
           <li><a href="leanengine_webhosting_guide-java.html">网站托管开发指南</a></li>
