关系建模太过于抽象，改成数据库设计反而估计有人会点开看一眼。 (#1430)
* 关系建模太过于抽象，改成数据库设计反而估计有人会点开看一眼。

* 修改数据库设计为数据模型设计

--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -2,7 +2,7 @@
 {% set appkey = '{{appkey}}' %}
 {% set masterkey = '{{masterkey}}' %}
 
-# {{platform}} 关系建模指南
+# {{platform}} 数据模型设计指南
 
 数据对象之间存在 3 种类型的关系。一对一关系将一个对象与另一个对象关联，一对多关系是一个对象关联多个对象，多对多关系则用来实现大量对象之间的复杂关系。我们支持 4 种方式来构建对象之间的关系：
 
@@ -107,7 +107,7 @@
 
 ### 使用关联表实现多对多关系
 
-有时我们需要知道更多关系的附加信息，比如在一个学生选课系统中，我们要了解学生打算选修的这门课的课时有多长，或者学生选修是通过手机选修还是通过网站操作的，这个时候单独使用 `AVRelation` 就无法满足需求了，因为 `AVRelation` 不支持额外的自定义属性，此时我们可以使用传统的数据库设计方法：关联表。
+有时我们需要知道更多关系的附加信息，比如在一个学生选课系统中，我们要了解学生打算选修的这门课的课时有多长，或者学生选修是通过手机选修还是通过网站操作的，这个时候单独使用 `AVRelation` 就无法满足需求了，因为 `AVRelation` 不支持额外的自定义属性，此时我们可以使用传统的数据模型设计方法：关联表。
 
 为此，我们创建一个独立的表 `StudentCourseMap` 来保存 `Student` 和 `Course` 的关系：
 
