--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -30,7 +30,7 @@
             <li><a href="realtime_guide-ios.html">实时通信开发指南</a></li>
             <li><a href="chatkit-ios.html">ChatKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="relation_guide-ios.html">关系建模指南</a></li>
+            <li><a href="relation_guide-ios.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-ios.html">权限管理使用指南</a></li>
             <li><a href="ios_statistics.html">统计分析开发指南</a></li>
             {% if node!='qcloud' %}
@@ -58,7 +58,7 @@
             <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
             <li><a href="chatkit-android.html">ChatKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="relation_guide-android.html">关系建模指南</a></li>
+            <li><a href="relation_guide-android.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-android.html">权限管理使用指南</a></li>
             <li><a href="android_statistics.html">统计分析开发指南</a></li>
             {% if node!='qcloud' %}
@@ -76,7 +76,7 @@
             <li><a href="js_push.html">消息推送开发指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
-            <li><a href="relation_guide-js.html">关系建模指南</a></li>
+            <li><a href="relation_guide-js.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-js.html">权限管理使用指南</a></li>
             {% if node!='qcloud' %}
             <li><a href="sms_guide-js.html">短信服务使用指南</a></li>
@@ -110,7 +110,7 @@
           <ul class="dropdown-menu">
             <li><a href="sdk_setup-python.html">SDK 安装指南</a></li>
             <li><a href="leanstorage_guide-python.html">数据存储开发指南</a></li>
-            <li><a href="relation_guide-python.html">关系建模指南</a></li>
+            <li><a href="relation_guide-python.html">数据模型设计指南</a></li>
             <li><a href="acl_guide-python.html">权限管理使用指南</a></li>
             <li><a href="/api-docs/python/leancloud.html" target="_blank">SDK API</a></li>
             <li role="separator" class="divider"></li>
