add embedded object

--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -17,7 +17,7 @@ Database | Database   | Application
 Table    | Collection | Class             
 Row      | Document   | Object            
 Index    | Index      | Index             
-JOIN     | embedded，reference  | Pointer, Relation
+JOIN     | Embedded，Reference  | Embedded Object, Pointer, Relation
 
 关系型数据库和文档型数据库的根本区别在于：
 
